# candy-kingdom

./: CMakeLists.txt
src/candy/: Main.cc
src/candy/core/: Solver.h
src/candy/frontend/: CLIOptions.cc  CLIOptions.h  CandyBuilder.cc
src/candy/gates/: CMakeLists.txt
src/candy/gates/algorithms/: BooleanCircuitVisualizer.cc  BooleanCircuitVisualizer.h  CMakeLists.txt  ClassificationBasedRecognizer.cc  ClassificationBasedRecognizer.h  GateClassifier.cc  GateClassifier.h  GraphBasedSequentialCounterRecognizer.cc  GraphBasedSequentialCounterRecognizer.h  SyntacticalSequentialCounterRecognizer.cc  SyntacticalSequentialCounterRecognizer.h  Unificator.cc  Unificator.h
src/candy/gates/datastructures/: BooleanCircuit.cc  BooleanCircuit.h  CMakeLists.txt  Gate.h  GateVertex.h  PermutationList.h  Signature.h  StructuralFormula.h  TupleGate.h  TupleNotation.h
src/candy/gates/utilities/: CMakeLists.txt  FormulaTools.cc  FormulaTools.h  GeneralFormulaTools.h  IOTools.h  SequentialCounterEncoder.h
src/candy/gbd/: hash.cpp  hash.h
src/candy/mtl/: Events.h
src/candy/simplification/: VariableElimination.h
src/candy/teexgraph/: CenGraph.cpp  Graph.cpp  Graph.h
testsrc/candy/gates/: CMakeLists.txt
testsrc/candy/gates/algorithms/: BooleanCircuitVisualizerTest.cc  ClassificationBasedRecognizerTest.cc  ConstraintEncoderTest.cc  EvaluationTest.cc  GraphBasedSequentialCounterRecognizerTest.cc  UnificatorTest.cc
testsrc/candy/gates/datastructures/: BooleanCircuitTest.cc  SignatureTest.cc  TupleNotationTest.cc
testsrc/candy/gates/problems/likewynn/: mp1-squ_ali_s10x10_c39_abio_SAT.cnf  mp1-squ_ali_s10x10_c39_abio_SAT_constraintsRemoved.cnf  mp1-squ_ali_s10x10_c39_abix_SAT.cnf  mp1-squ_ali_s10x10_c39_bail_SAT.cnf  mp1-squ_ali_s10x10_c39_sinx_SAT.cnf  mp1-squ_ali_s10x10_c39_sinz_SAT.cnf  mp1-squ_any_s09x07_c27_abio_UNS.cnf  (+10 more)
