add_library(gates OBJECT
    GateAnalyzer.cc
    GateAnalyzer.h
    GateDFSTraversal.h
    GateProblem.h
    AIGProblem.h
    MiterDetector.h
    MiterDetector.cc
    datastructures/TupleNotation.h
    datastructures/BooleanCircuit.h
    datastructures/Gate.h
    datastructures/GateVertex.h
    datastructures/Signature.h
    datastructures/StructuralFormula.h
    datastructures/PermutationList.h)
